# casa6

./: .gitattributes  .gitignore  .gitmodules  build.conf  build.properties  configure.ac  readme.md  setup.py
ac/m4/: m4_ax_boost_base.m4  m4_ax_boost_python.m4  m4_ax_canonical_name.m4  m4_ax_cxx11.m4  m4_ax_dbus.m4  m4_ax_dbus_cpp.m4  m4_ax_eigen.m4  m4_ax_expand_path.m4  m4_ax_gsl.m4  m4_ax_lib_stdcxx.m4  m4_ax_libxml2.m4  m4_ax_openmp.m4  m4_ax_path_to_binary.m4  m4_ax_pkg_prog_pkg_config.m4  m4_ax_pthread.m4  m4_ax_python_devel.m4  m4_ax_python_numpy.m4  m4_ax_rpfits.m4  m4_ax_swig.m4
ac/scripts/: configure.commit
ac/templates/: build.in  setup.py.in
casa5/code/: CHANGELOG.LAST  CMakeLists.txt
casa5/gcwrap/: CMakeLists.txt
casaTestHelper/: Compare.py  TestHelpers.py  __init__.py
casatasks/: .gitignore  .gitmodules  readme.md  setup.py  version
casatasks/src/: config.py
casatasks/tests/: casaTestHelper.py  run.py
casatasks/xml/: accor.xml  apparentsens.xml  applycal.xml  asdmsummary.xml  bandpass.xml  blcal.xml  calstat.xml  clearcal.xml  clearstat.xml  concat.xml  conjugatevis.xml  cvel.xml  cvel2.xml  deconvolve.xml  delmod.xml  exportasdm.xml  exportfits.xml  exportuvfits.xml  feather.xml  fixplanets.xml  fixvis.xml  flagcmd.xml  flagdata.xml  flagmanager.xml  fluxscale.xml  fringefit.xml  ft.xml  gaincal.xml  gencal.xml  hanningsmooth.xml  imbaseline.xml  imcollapse.xml  imcontsub.xml  imdev.xml  imfit.xml  imhead.xml  imhistory.xml  immath.xml  immoments.xml  impbcor.xml  (+80 more)
casatests/: __init__.py  __main__.py  readme.md
casatests/e2e/: test_e2e_fits_import_export.py  test_e2e_simanalyze_m51_3sim_alma.py  test_e2e_time_average_and_rflag.py
casatests/performance/: __main__.py  test_perf_tclean_mem_setweighting.py
casatests/regression/: test_e2e_time_average_and_rflag.py  test_regression_alma_M100_if.py  test_regression_alma_M100_sd.py  test_regression_fits_import_export.py  test_regression_sim_TP.py  test_regression_sim_components.py  test_regression_sim_components_and_skymodel.py  test_regression_sim_cube.py  test_regression_sim_multi_arrays_and_TP.py  test_regression_simalma_12m_ACA_combination.py  test_regression_tclean_startmodel_restart.py  test_regression_timeaverage_and_rflag.py
casatests/stakeholder/: test_stk_alma_pipeline_imaging.py  test_stk_vlass_pipeline_imaging.py
casatests/stakeholders/: test_stk_alma_pipeline_imaging.py  test_stk_vlass_pipeline_imaging.py
casatestutils/: LICENSE  README.md  runtest.py  setup.py  version
casatestutils/casatestutils/: __init__.py  check.py  compare.py  component_to_test_map.json  filltsys.py  runtest.py  testhelper.py  weblog.py
casatestutils/testrunner/: run.py
casatestutils/tests/: nb_test_runtest.ipynb  test_testutils_check.py
casatools/: casa-source  casadata.md  configure.ac  readme.md  test.md
casatools/fortran-source/: readme.md
casatools/scripts/: brt  extract_symbols.pl  find-glibc-private  fixrpath.pl  gcw-pick  mod-closure  output-snapshot  version  xml-casa
casatools/xml/: agentflagger.xml  atcafiller.xml  atmosphere.xml  calanalysis.xml  calibrater.xml  componentlist.xml  coordsys.xml  functional.xml  image.xml  imagemetadata.xml  imagepol.xml  imager.xml  iterbotsink.xml  linearmosaic.xml  logsink.xml  measures.xml  miriadfiller.xml  ms.xml  msmetadata.xml  mstransformer.xml  quanta.xml  regionmanager.xml  sakura.xml  sdm.xml  sidebandseparator.xml  simulator.xml  singledishms.xml  spectralline.xml  synthesisdeconvolver.xml  synthesisimager.xml  synthesisimstore.xml  synthesismaskhandler.xml  synthesisnormalizer.xml  synthesisutils.xml  table.xml  tablerow.xml  utils.xml  vlafiller.xml  vpmanager.xml
code/: CMakeLists.txt
code/imageanalysis/: CMakeLists.txt
code/synthesis/: CMakeLists.txt
fortran-source/rpfits/: GNUmakefile
gcwrap/: CMakeLists.txt
gcwrap/python/: CMakeLists.txt
gcwrap/tasks/: accum.xml  bandpass.xml  blcal.xml  cvel.xml  fringefit.xml  gaincal.xml  imregrid.xml  listfits.xml  mstransform.xml  plotbandpass.xml  polcal.xml  tclean.xml  uvcontsub.xml
patches/: grpc-source.diff
scripts/: gcw-pick  mod-closure  output-snapshot  version  xml-casa
src/python/: __main__.py  coercetype.py  ctuser.py  paramproc.py  platform.py
src/scripts/: JPLephem_reader2.py  callibrary.py  cleanhelper.py  concatephem.py  config.py  convertephem.py  correct_ant_posns.py  correct_ant_posns_alma.py  correct_ant_posns_evla.py  flaghelper.py  ialib.py  imtools.py  mstools.py  partitionhelper.py  sdbeamutil.py  sdutil.py  setjy_helper.py  simutil.py  solar_system_setjy.py  update_spw.py  userconfig.py  vishead_util.py
src/tasks/: task_accor.py  task_accum.py  task_applycal.py  task_asdmsummary.py  task_bandpass.py  task_blcal.py  task_calstat.py  task_clearcal.py  task_clearstat.py  task_concat.py  task_conjugatevis.py  task_cvel.py  task_cvel2.py  task_delmod.py  task_exportasdm.py  task_exportfits.py  task_exportuvfits.py  task_feather.py  task_fixplanets.py  task_fixvis.py  task_flagcmd.py  task_flagdata.py  task_flagmanager.py  task_fluxscale.py  task_ft.py  task_gaincal.py  task_gencal.py  task_hanningsmooth.py  task_imcollapse.py  task_imcontsub.py  task_imdev.py  task_imfit.py  task_imhead.py  task_imhistory.py  task_immath.py  task_immoments.py  task_impbcor.py  task_importasap.py  task_importasdm.py  task_importatca.py  (+64 more)
tests/: casaTestHelper.py  run.py
tests/build-logs/: centos-6
tests/tasks/: listing.py  selection_syntax.py  test_applycal.py  test_asdmsummary.py  test_bandpass.py  test_calstat.py  test_clearstat.py  test_concat.py  test_conjugatevis.py  test_cvel.py  test_cvel2.py  test_exportasdm.py  test_exportfits.py  test_fixplanets.py  test_fixvis.py  test_flagcmd.py  test_flagdata.py  test_flagmanager.py  test_fluxscale.py  test_fringefit.py  test_gaincal.py  test_gencal.py  test_hanningsmooth.py  test_imcollapse.py  test_imcontsub.py  test_imdev.py  test_imfit.py  test_imhead.py  test_imhistory.py  test_immath.py  test_immoments.py  test_impbcor.py  test_importasap.py  test_importasdm.py  test_importatca.py  test_importfitsidi.py  (+49 more)
(+2962 files in other folders)
